<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".CadastrarAgenda">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/cadastro_de_nova_agenda"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/defina_uma_espcialidade"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/spinnerAgenda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/qual_o_endere_o_do_atendimento"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTextEnderecoConsulta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/None"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/qual_dia"
                android:textColor="#000000" />

            <Button
                android:id="@+id/buttonEscolheData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/escolha_uma_data" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/quais_hor_rios"
                android:textColor="#000000" />

            <Button
                android:id="@+id/buttonHorarios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/escolha_os_hor_rios" />

            <Button
                android:id="@+id/buttonCadastrarAgenda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:onClick="btCadastrarAgendaOnClick"
                android:text="@string/cadastrar2" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>