<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".Cadastrof">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            tools:layout_marginLeft="20dp"
            tools:layout_marginRight="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:singleLine="true"
                android:text="@string/cadastro_de_novo_usuario"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColorHighlight="#00BCD4"
                android:textIsSelectable="false"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtNome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:autofillHints=""
                android:background="#74F8F8F8"
                android:hint="@string/nome_completto"
                android:inputType="text" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="#74F8F8F8"
                android:hint="@string/e_maiel"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/txtEndereco"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="#74F8F8F8"
                android:hint="@string/adress"
                android:inputType="text" />

            <LinearLayout
                android:id="@+id/LinearSexo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:onClick="onCheckboxClickedSex"
                    android:text="@string/m"
                    android:textAllCaps="true"
                    android:textColorHighlight="#000000" />

                <CheckBox
                    android:id="@+id/checkBoxF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:onClick="onCheckboxClickedSex"
                    android:text="@string/f" />
            </LinearLayout>

            <EditText
                android:id="@+id/txtTelefone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="#74F8F8F8"
                android:hint="@string/telefone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/txtCPF"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="#74F8F8F8"
                android:hint="@string/cpf"
                android:inputType="number" />

            <EditText
                android:id="@+id/txtRG"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="#74F8F8F8"
                android:hint="@string/rg"
                android:inputType="number" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="#74F8F8F8"
                android:ems="10"
                android:hint="@string/data_de_nascimento"
                android:inputType="date" />

            <LinearLayout
                android:id="@+id/LinearUsuario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxPaciente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClickedUsuario"
                    android:text="@string/paciente" />

                <CheckBox
                    android:id="@+id/checkBoxMedico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClickedUsuario"
                    android:text="@string/m_dico" />
            </LinearLayout>

            <EditText
                android:id="@+id/txtSenha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="#74F8F8F8"
                android:hint="@string/cadastre_uma_nova_senha"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/buttonCadastrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:onClick="btCadastrarOnClick"
                android:text="@string/cadastrar"
                app:backgroundTint="#9C27B0" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>