<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".NovaConsultaPaciente">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/nova_consulta"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/escolha_a_especialidade_desejada"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/spinnerPaciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/qual_dia"
                android:textColor="#000000" />

            <Button
                android:id="@+id/buttonEscolheDataP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/escolha_uma_data" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/qual_hor_rio"
                android:textColor="#000000" />

            <Button
                android:id="@+id/buttonHorariosP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/escolha_um_hor_rio" />

            <Button
                android:id="@+id/buttonAgendarConsulta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:onClick="btAgendarConsultaOnClick"
                android:text="@string/agendar" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>