<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".PagamentoPlanoDeSaude">

    <TextView
        android:id="@+id/textView123833"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/carrinho_de_pagamento"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/n_mero_do_cart_o"
        app:layout_constraintStart_toStartOf="@+id/textView123833"
        app:layout_constraintTop_toBottomOf="@+id/textView123833" />

    <TextView
        android:id="@+id/textView123"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/n_mero_do_cart_o"
        app:layout_constraintStart_toStartOf="@+id/textView123833"
        app:layout_constraintTop_toBottomOf="@+id/textView123833" />

    <EditText
        android:id="@+id/editTextTextPersonName1"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/_0000_0000_0000_0000"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textView71"
        app:layout_constraintTop_toBottomOf="@+id/textView71"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView153"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nome_impresso_no_cart_o"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName1"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName1" />

    <EditText
        android:id="@+id/editTextTextPersonName43"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/a"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView153"
        app:layout_constraintTop_toBottomOf="@+id/textView153"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView126"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/data_de_validade"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName43"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName43" />

    <EditText
        android:id="@+id/editTextTextPersonName35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/mm_aaaa"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/textView126"
        app:layout_constraintTop_toBottomOf="@+id/textView126"
        android:autofillHints="" />

    <Button
        android:id="@+id/button28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:onClick="btEfetuarPagmento"
        android:text="@string/efetuar_solicita_o"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName35" />

</androidx.constraintlayout.widget.ConstraintLayout>