<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/textViewLogin"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="250dp"
        android:autofillHints=""
        android:background="#74F8F8F8"
        android:hint="@string/login_e_mail"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textViewSenha"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="#74F8F8F8"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/textViewLogin"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@id/textViewLogin"
        app:layout_constraintTop_toTopOf="@id/textViewLogin" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="35dp"
        android:onClick="btEntrarOnClick"
        android:text="@string/entrar"
        app:backgroundTint="#9C27B0"
        app:layout_constraintStart_toStartOf="@id/textViewSenha"
        app:layout_constraintTop_toBottomOf="@+id/textViewSenha" />

    <Button
        android:id="@+id/btNovoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="35dp"
        android:onClick="btNovoUsuOnClick"
        android:text="@string/novo_usu_rio"
        app:backgroundTint="#9C27B0"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textViewSenha" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="144dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/textViewLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/app"
        tools:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>